templates/service.yml

apiVersion: v1
kind: Service
metadata:
  name: index
spec:
  ports: 
  - port: 80
    targetPort: 80
  selector:
    app: index

---
apiVersion: v1
kind: Service
metadata:
  name: cheese
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: cheese
